# openfga-mcp

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .php-cs-fixer.dist.php  .pre-commit-config.yaml  .winsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.dev  Dockerfile.test  MCP_STANDARD.md  Makefile  Makefile.docker  OPENFGA.md  README.md  SECURITY.md  codecov.yml  commitlint.config.js  composer.json  docker-compose.example.yml  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  phpstan.neon.dist  phpunit.xml  psalm.xml.dist  pyproject.toml  pyrightconfig.json  rector.php  smithery.yaml
.claude/commands/: explore-plan-code-test.md  test.md
.github/: CONTRIBUTING.md  SECURITY.md  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml  config.yml  feature-request.yml  question.yml
.github/actions/python-setup/: action.yml
.github/workflows/: build-docker.yml  ci.yml  codeql.yml  commit-lint.yml  docker-publish.yml  docker.yml  lint.yml  load-config.yml  publish.yml  quality-changelog-update.yml  quality-commit-standards.yml  quality-static-analysis.yml  release.yml  security-attestation.yml  security-code-analysis.yml  security-dependencies-merge.yml  security-dependencies.yml  security-dependency-review.yml  security-provenance.yml  security-sbom.yml  security-scorecard.yml  setup-python.yml  test-fuzzing.yml  test-integration.yml  test-unit.yml  test.yml  type-check.yml  update-lockfile.yml
.serena/: project.yml
.serena/cache/php/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
docs/: AUTHORING_OPENFGA_MODELS.md  DOTNET_SDK.md  GO_SDK.md  JAVA_SDK.md  JS_SDK.md  LARAVEL_SDK.md  OPENFGA_DOCS.md  PHP_SDK.md  PYTHON_SDK.md  PhpMcp.md  api-reference.md  index.md  installation.md  release-process.md  usage.md
src/: Bootstrap.php  ConfigurableHttpServerTransport.php  ConfigurationParser.php  ConfigurationResult.php  DebugLogger.php  Helpers.php  LoggingStdioTransport.php  LoggingToolWrapper.php  OfflineClient.php  Server.php  __init__.py  helpers.php  server.py
src/Completions/: AbstractCompletions.php  AccessPattern.php  AuditFrequency.php  ChunkIdCompletionProvider.php  ClassNameCompletionProvider.php  ComplexityLevel.php  ComplianceFramework.php  DelegationType.php  MethodNameCompletionProvider.php  ModelIdCompletionProvider.php  ObjectCompletionProvider.php  QueryType.php  RelationCompletionProvider.php  RiskLevel.php  SdkCompletionProvider.php  SectionNameCompletionProvider.php  SecurityLevel.php  StoreIdCompletionProvider.php  SystemCriticality.php  SystemType.php  UserCompletionProvider.php
src/Documentation/: DocumentationChunker.php  DocumentationIndex.php  DocumentationIndexSingleton.php
src/Models/: GuideDocumentation.php  SdkDocumentation.php  SearchResult.php
src/Models/Builders/: SearchResultBuilder.php
src/Models/Factories/: DocumentationFactory.php
src/Models/Traits/: ValidatesInput.php
src/Prompts/: AbstractPrompts.php  AuthoringGuidancePrompts.php  ModelDesignPrompts.php  RelationshipTroubleshootingPrompts.php  SecurityGuidancePrompts.php
src/Resources/: AbstractResources.php  DocumentationResources.php  ModelResources.php  RelationshipResources.php  StoreResources.php
src/Responses/: AbstractResponse.php  getClassDocumentationException.php  getClassDocumentationNotFoundException.php  getClassDocumentationResponse.php  getDocumentationChunkException.php  getDocumentationChunkNotFoundException.php  getDocumentationChunkResponse.php  getDocumentationSectionException.php  getDocumentationSectionNotFoundException.php  getDocumentationSectionResponse.php  getMethodDocumentationException.php  getMethodDocumentationNotFoundException.php  getMethodDocumentationResponse.php  getSdkDocumentationException.php  getSdkDocumentationNotFoundException.php  getSdkDocumentationResponse.php  listDocumentationException.php  listDocumentationResponse.php  searchDocumentationException.php  searchDocumentationNoResultsResponse.php  searchDocumentationResponse.php
src/Tools/: AbstractTools.php  DocumentationTools.php  ModelTools.php  RelationshipTools.php  SearchDocumentationTool.php  StoreTools.php
src/openfga-mcp/: __init__.py  __main__.py  server.py
src/openfga_mcp/: __init__.py  __main__.py  openfga.py  server.py
tests/: bootstrap.php
tests/Fuzzing/: README.md  generate-sarif.php  run-fuzzers.php
tests/Fuzzing/Targets/: APIResponseTarget.php  AuthenticationConfigTarget.php  ConfigurationTarget.php  DSLParserTarget.php  HTTPTransportTarget.php  ResourceURITarget.php  StoreModelIDTarget.php  TupleKeyTarget.php
tests/Integration/: Pest.php  README.md  bootstrap.php
tests/Integration/Completions/: CompletionProvidersIntegrationTest.php
tests/Integration/Documentation/: DocumentationIntegrationTest.php
tests/Integration/Prompts/: PromptsIntegrationTest.php
tests/Integration/Resources/: ModelResourcesTest.php  RelationshipResourcesTest.php  StoreResourcesTest.php
tests/Integration/Tools/: DocumentationToolsIntegrationTest.php  ModelToolsTest.php  RelationshipToolsTest.php  StoreToolsTest.php
tests/Unit/: ConfigurableHttpServerTransportTest.php  ConfigurationParserTest.php  DebugLoggerTest.php  ExampleTest.php  FuzzingTest.php  LoggingStdioTransportTest.php  LoggingToolWrapperTest.php  OfflineClientTest.php  ServerTest.php  TestTool.php
tests/Unit/Completions/: AbstractCompletionsTest.php  ChunkIdCompletionProviderTest.php  ClassNameCompletionProviderTest.php  CompletionEnumsTest.php  MethodNameCompletionProviderTest.php  ModelIdCompletionProviderTest.php  ObjectCompletionProviderTest.php  RelationCompletionProviderTest.php  SdkCompletionProviderTest.php  SectionNameCompletionProviderTest.php  (+2 more)
tests/integration/: seed_fga.py  setup_fga.sh  test_mcp_integration.py
tests/unit/: test_openfga.py  test_server.py
tools/documentation-sync/: .gitignore  README.md  composer.json  sync.php
(+24 files in other folders)
