[project]
name = "openfga-mcp"
version = "0.0.1"
description = "An experimental Model Context Protocol (MCP) server providing tools to read, search, and manipulate OpenFGA stores programmatically via Large Language Models (LLMs.)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenFGA" }]
maintainers = [{ name = "Evan Sims", email = "evan.sims@okta.com" }]
keywords = ["mcp", "llm", "automation", "openfga"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["click>=8.1.8", "mcp[cli]>=1.3.0", "openfga-sdk>=0.9.1"]

[project.scripts]
openfga-mcp-server = "openfga_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openfga-mcp"]

[tool.uv]
dev-dependencies = [
    "pyright >= 1.1.389",
    "ruff >= 0.7.3",
    "pytest >= 8.0.0",
    "pre-commit >= 3.5.0",
    "commitizen >= 3.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/openfga-mcp/__init__.py:__version__",
]
update_changelog_on_bump = true
bump_message = "chore(release): bump version to $new_version"
