[project]
name = "openfga-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for OpenFGA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.4.1",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "typer[all]>=0.9.0",
    "ruff>=0.3.0", "pyright>=1.1.353", "pre-commit>=3.6.0", "pytest>=8.0.0"
]

[project.scripts]
openfga-mcp = "openfga_mcp:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # naming
    "UP",  # pyupgrade
    "ANN", # annotations
    "PT",  # pytest
    "RUF", # ruff-specific
    "SIM", # simplify
    "ARG", # unused arguments
    "ERA", # eradicate
    "PL",  # pylint
]
ignore = ["ANN101", "ANN102", "ANN401", "PLR0913"]

[tool.ruff.isort]
known-first-party = ["openfga_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests"]
venvPath = "."
venv = "venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
